<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".CustomerVendor">

        <TextView
            android:id="@+id/custvendtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customers_vendors"
            android:textAlignment="center"
            android:textColor="@color/App_color"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addcustBtn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/App_color"
            android:text="@string/add_new"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:icon="@drawable/add" />

        <LinearLayout
            android:id="@+id/addForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer">

                </RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendor">

                </RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Customer/Vendor">

                </RadioButton>

            </RadioGroup>

            <EditText
                android:id="@+id/comname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/company"
                android:drawablePadding="8dp"
                android:hint="@string/company_name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cno"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="phone"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/name"
                android:drawablePadding="8dp"
                android:hint="@string/contact_number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="postalAddress"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/address"
                android:drawablePadding="8dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress"

                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:drawableStart="@drawable/note"
                android:drawablePadding="8dp"
                android:hint="@string/note"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="16sp" />

            <Button
                android:id="@+id/addData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/add">

            </Button>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>